--- a/preview/index.html
+++ b/preview/index.html
@@ -4,19 +4,28 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover" />
   <title>Preview APK — APK Store</title>
-  <meta name="description" content="Preview aplikasi/game di APK Store." />
+  <meta name="description" content="Preview aplikasi dan game di APK Store." />
 
-  <!-- Make all relative asset paths (icon/..., etc) resolve from site root -->
+  <!-- Supaya path icon/asset tetap aman -->
   <base href="../" />
 
+  <!-- Global CSS -->
   <link rel="stylesheet" href="style.css" />
 </head>
-<body>
+
+<body class="preview android">
+
+  <!-- Header (tetap, tapi bukan modal) -->
   <header class="header">
     <div class="header-inner">
       <div class="topRow">
         <div class="brand" style="gap:12px;min-width:0">
-          <button class="btnAuth" id="backBtn" type="button" aria-label="Kembali ke Home">← Home</button>
+          <button
+            class="btnAuth"
+            id="backBtn"
+            type="button"
+            aria-label="Kembali ke Home"
+          >← Home</button>
 
           <div class="mark" aria-hidden="true">
             <svg width="18" height="18" viewBox="0 0 24 24" fill="none">
@@ -27,12 +36,18 @@
             </svg>
           </div>
 
-          <a class="title" href="./" style="display:block;min-width:0;overflow:hidden;text-overflow:ellipsis;white-space:nowrap">APK Store</a>
+          <a
+            class="title"
+            href="./"
+            style="display:block;min-width:0;overflow:hidden;text-overflow:ellipsis;white-space:nowrap"
+          >
+            APK Store
+          </a>
         </div>
 
         <div class="auth">
           <button class="btnAuth primary" id="loginBtn">Login Google</button>
-          <button class="avatarBtn" id="avatarBtn" aria-label="Buka profil" title="Profil">
+          <button class="avatarBtn" id="avatarBtn" aria-label="Profil">
             <img id="headerAvatar" alt="profil">
           </button>
         </div>
@@ -40,18 +55,35 @@
     </div>
   </header>
 
-  <main class="wrap content">
+  <!-- ===== FULL PAGE PREVIEW (BUKAN MODAL) ===== -->
+  <main class="previewPage">
     <div id="preview">
       <div class="state">Loading preview...</div>
     </div>
   </main>
 
-  <div id="toast" style="
-    position:fixed;left:50%;bottom:calc(18px + var(--safeB));transform:translateX(-50%);
-    background:rgba(2,6,23,.92);color:#fff;padding:10px 12px;border-radius:999px;
-    font-size:13px;display:none;z-index:400;box-shadow:0 18px 40px rgba(2,6,23,.35);
-    max-width:92vw;"></div>
+  <!-- Toast -->
+  <div
+    id="toast"
+    style="
+      position:fixed;
+      left:50%;
+      bottom:calc(18px + var(--safeB));
+      transform:translateX(-50%);
+      background:rgba(2,6,23,.92);
+      color:#fff;
+      padding:10px 12px;
+      border-radius:999px;
+      font-size:13px;
+      display:none;
+      z-index:400;
+      box-shadow:0 18px 40px rgba(2,6,23,.35);
+      max-width:92vw;
+    "
+  ></div>
 
+  <!-- Logic preview -->
   <script type="module" src="preview/preview.js"></script>
+
 </body>
 </html>
