--- a/preview/index.html
+++ b/preview/index.html
@@ -16,7 +16,7 @@
 <body class="preview android">
 
   <!-- Header (tetap, tapi bukan modal) -->
-  <header class="header">
+<header class="header previewHeader">
     <div class="header-inner">
       <div class="topRow">
         <div class="brand" style="gap:12px;min-width:0">
