--- a/preview/index.html
+++ b/preview/index.html
@@ -11,7 +11,7 @@
   <base href="../" />
 
   <!-- CSS KHUSUS PREVIEW (tanpa file tambahan lain) -->
-  <link rel="stylesheet" href="preview/style.css" />
+  <link rel="stylesheet" href="preview/style.css?v=20260103" />
 </head>
 
 <body class="preview">
@@ -47,7 +47,6 @@
   <!-- Toast -->
   <div id="toast" class="toast" aria-live="polite" aria-atomic="true"></div>
 
-  <script type="module" src="preview/preview.js"></script>
+  <script type="module" src="preview/preview.js?v=20260103"></script>
 </body>
 </html>
-
